[gd_scene load_steps=10 format=4 uid="uid://d4kahl48axhq"]

[ext_resource type="Script" path="res://Scripts/KreideTafel.gd" id="1_l8k1g"]
[ext_resource type="Material" uid="uid://7ntuorva4eei" path="res://Assets/Materials/KreideTafelFl채che.tres" id="1_nv4ml"]
[ext_resource type="Material" uid="uid://c68mqmtwwwsba" path="res://Assets/Materials/KreideTafelRand.tres" id="2_by3jb"]

[sub_resource type="ArrayMesh" id="ArrayMesh_spnif"]
_surfaces = [{
"aabb": AABB(0.256332, 0.938093, 0.219841, 2.5, 1.24163, 0.0523127),
"format": 34896613377,
"index_count": 54,
"index_data": PackedByteArray("AAADAAEAAAACAAMABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEACAALAAkACAAKAAsADgANAA8ADgAMAA0AEAATABEAEAASABMAFgAVABcAFgAUABUA"),
"name": "Tafelfl채che",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACnBGevAAAAABD8Z68AAAAApwQAAAAAAAAQ/AAAAAD//6cEZ68AAP//EPxnrwAA//+nBAAAAAD//xD8AAAAAAAAEPz//wAAAAD/////AAAAABD8AAAAAAAA//8AAAAA//8Q/P//AAD///////8AAP//EPwAAAAA/////wAAAAD//6cE//8AAP//AAD//wAA//+nBAAAAAD//wAAAAAAAAAApwT//wAAAAAAAP//AAAAAKcEAAAAAAAAAAAAAAAA")
}, {
"aabb": AABB(0.234723, 0.817076, 0.219841, 2.54256, 1.36265, 0.0523128),
"format": 34896613377,
"index_count": 204,
"index_data": PackedByteArray("AAADAAEAAAACAAMABgALAAcABgAKAAsACAAFAAkACAAEAAUABgAIAAoABgAEAAgACwAFAAcACwAJAAUADgATAA8ADgASABMAEAANABEAEAAMAA0ADgAQABIADgAMABAAEwANAA8AEwARAA0AFAAWABUAFAAJABYACQAZABYACQALABkACwAYABkACwAXABgAFwAVABgAFwAUABUACQAXAAsACQAUABcAGQAVABYAGQAYABUAGgAcABsAGgAHABwABwAfABwABwAFAB8ABQAeAB8ABQAdAB4AHQAbAB4AHQAaABsABwAdAAUABwAaAB0AHwAbABwAHwAeABsAIAAkAA8AIAAmACQAIwAqACIAIwArACoAJAAnACUAJAAmACcADwAlABMADwAkACUAEwAnACEAEwAlACcAIQAmACAAIQAnACYAKAArACkAKAAqACsAIgAoACAAIgAqACgAIAApACEAIAAoACkAIQArACMAIQApACsAJgAjACIAJgAnACMADwAoACAADwApACgAEwApAA8AKQATACEA"),
"name": "Tafelrahmen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray("LAL5GgAAAAAsAmr8AAAAAOL9+RoAAAAA4v1q/AAAAAAsAmr8//8AACwC/////wAALAJq/AAAAAAsAv//AAAAAOL9avz//wAA4v3/////AADi/Wr8AAAAAOL9//8AAAAA4v35Gv//AADi/bwW//8AAOL9+RoAAAAA4v28FgAAAAAsAvka//8AACwCvBb//wAALAL5GgAAAAAsArwWAAAAAOL9vBb//wAA//+8Fv//AAD///////8AAOL9vBYAAAAA//+8FgAAAAD/////AAAAACwCvBYAAAAAAAC8FgAAAAAAAP//AAAAACwCvBb+/wAAAAC8Fv7/AAAAAP///v8AAOL9AAAAAAAALAIAAAAAAADi/QAA//8AACwCAAD//wAA4v28FjYRAAAsArwWNhEAAOL9AAA2EQAALAIAADYRAADi/c0AAAAAACwCzQAAAAAA4v3NAP//AAAsAs0A//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_dasur"]
resource_name = "KreideTafel_Cube_006"
_surfaces = [{
"aabb": AABB(0.256332, 0.938093, 0.219841, 2.5, 1.24163, 0.0523127),
"attribute_data": PackedByteArray("XNL5euhT//+CQv//XNJ8vQAA///kVW51QdT5euRV/v9B1Hy94VdudehTbnWCQoJ2Jdb5egAAgnbkVf//JdZ8veRVbnVB1Pl64Vf//0HUfL1xaJAzY2eQM3FoVDZjZ1Q2gGlUNnFoVDaAaZIzcWiSMyJmVDZjZ1Q2ImaSM2NnkjPiZJAzImaQM+JkVDYiZlQ2"),
"format": 34896613399,
"index_count": 54,
"index_data": PackedByteArray("AAAIAAMAAAAGAAgAEQAPABMAEQAMAA8ACwAEAA0ACwACAAQABwAKABAABwABAAoAEgAFAAkAEgAOAAUAFAAXABUAFAAWABcAGgAZABsAGgAYABkAHAAfAB0AHAAeAB8AIgAhACMAIgAgACEA"),
"material": ExtResource("1_nv4ml"),
"name": "Tafelfl채che",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACnBGev//8AAKcEZ69U1QAApwRnr/+/AAAQ/Gev//8AABD8Z6//vwAAEPxnr1TVAACnBAAA//8AAKcEAABU1QAAEPwAAP//AAAQ/AAAVNX//6cEZ69U1f//pwRnr/+///+nBGev/////xD8Z6//v///EPxnr1TV//8Q/Gev/////6cEAABU1f//pwQAAP////8Q/AAAVNX//xD8AAD//wAAEPz//1TVAAD/////VNUAABD8AABU1QAA//8AAFTV//8Q/P//VNX///////9U1f//EPwAAFTV/////wAAVNX//6cE//9U1f//AAD//1TV//+nBAAAVNX//wAAAABU1QAApwT//1TVAAAAAP//VNUAAKcEAABU1QAAAAAAAFTV/z//f1VVVFX/f/9//z//f/9//39U1aoq/z//f1VVVFX/P/9/VNWqKlRVVFX/f/9//7//f/9//39U1aoq/7//f1RVVFX/v/9/VNWqKv+//39UVaqqVFWqqlRVqqpUVaqqqqpUVaqqVFWqqlRVqqpUVaqqVFWqqlRVqqpUVaqqVFVUVaqqVFWqqlRVqqpUVaqq")
}, {
"aabb": AABB(0.234723, 0.817076, 0.219841, 2.54256, 1.36265, 0.0523128),
"attribute_data": PackedByteArray("1qMGfFNhBnzWo///U2H+/4JC//8XYf//CGD//09I//9pRf//2qwGfMurBnxpRf//gkJudRdhgnYIYIJ2T0hudWlFbnXarP//y6v//2lFbnXIXoJ2NUtudTVLbnUIYIJ21qP//09IbnUbTm51FqX//xNY///PSm51yF7//zVL//81S///CGD//9ajBnxPSP//ZEVudRtO//8WpQZ8E1huda/Hqnh8rDU32U+dMFOrNTeyTp0wl12xMa/HfL3ZT251nKk1N7JObnXFqjU3l12CdnLKqnh8rE80yVSdMFOrTzTkVZ0w1VqxMXLKfL3JVG51nKlPNORVbnXFqk801VqCdi/HxHXoU50wE1ixMTbNqnhiyMR1xFKdMOhTbnWUycR1E1iCdjbNfL3EUm51YsjEdS/HqnhnTJ0w1VqxMXLKqnhiyKp4l02dMGdMbnWUyap41VqCdnLKfL2XTW51YsiqeAJRbnXLq///z0q5bodSrHJkRbluxFJudQJR///LqwZ8G05udVNhgnaHUm51xFKqchtO//9TYf//E1iCduFX///+Sm51NUVudRNY///hV2510FBudchegnb+SrluNUW5btBQ///IXv//j6v//wJRbnVLUqxyh1JudY+rBnwCUf//F2GCduhTbnVLUm51h1Kqchdh///oU///"),
"format": 34896613399,
"index_count": 204,
"index_data": PackedByteArray("AAADAAEAAAACAAMACQASAAoACQARABIADQAGAA4ADQAFAAYACAAMABAACAAEAAwAEwAHAAsAEwAPAAcAGAAmABsAGAAiACYAHgAXACEAHgAUABcAGQAfACMAGQAVAB8AJQAWABoAJQAgABYAKgAxACwAKgAvADEAMAA+ADIAMAA8AD4AOwA4AD0AOwA2ADgANQArADcANQApACsALgA0ADoALgAoADQAPwAtADMAPwA5AC0AQQBKAEUAQQBGAEoARwBXAEsARwBTAFcAUgBRAFYAUgBNAFEATABEAFAATABAAEQASABOAFQASABCAE4AVQBDAEkAVQBPAEMAWgBoAB0AWgBuAGgAZQB4AGEAZQB8AHgAZgBxAGoAZgBtAHEAHABrACcAHABnAGsAJABvAFwAJABpAG8AXgBsAFgAXgBwAGwAcwB9AHcAcwB5AH0AYgB0AFsAYgB6AHQAWQB2AF8AWQByAHYAXQB7AGMAXQB1AHsAbABkAGAAbABwAGQAGwByAFkAGwB2AHIAJgB2ABsAdgAmAF8A"),
"material": ExtResource("2_by3jb"),
"name": "Tafelrahmen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 126,
"vertex_data": PackedByteArray("LAL5GgAA//8sAmr8AAD//+L9+RoAAP//4v1q/AAA//8sAmr8//9U1SwCavz///+/LAL//////78sAv////9U1SwCavwAAFTVLAJq/AAA//8sAv//AAD//ywC//8AAFTV4v1q/P//VNXi/Wr8////v+L9//////+/4v3/////VNXi/Wr8AABU1eL9avwAAP//4v3//wAA///i/f//AABU1eL9+Rr///+/4v35Gv//VNXi/bwW//9U1eL9vBb///+/4v35GgAA///i/fkaAABU1eL9vBYAAFTV4v28FgAA///i/bwWAABU1eL9vBYAAP//LAL5Gv///78sAvka//9U1SwCvBb//1TVLAK8Fv///78sAvkaAAD//ywC+RoAAFTVLAK8FgAA//8sArwWAABU1SwCvBYAAP//LAK8FgAAVNXi/bwW/////+L9vBb/////4v28Fv///////7wW////////vBb///////+8Fv/////i/f///////+L9////////4v3//////7////////////////////+////////////i/bwWAAD//+L9vBYAAP//4v28FgAA/////7wWAAD/////vBYAAP////+8FgAA///i/f//AAD//+L9//8AAP//4v3//wAA/7//////AAD///////8AAP+//////wAA//8sArwWAAD//ywCvBYAAP//LAK8FgAA//8AALwWAAD//wAAvBYAAP//AAC8FgAA//8sAv//AAD//ywC//8AAP+/LAL//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA/78sArwW/v///ywCvBb+////LAK8Fv7///8AALwW/v///wAAvBb+////AAC8Fv7///8sAv///////ywC//////+/LAL///////8AAP///v///wAA///+////AAD///7//7/i/QAAAABU1eL9AAAAAP//4v0AAAAA///i/QAAAABU1SwCAAAAAP//LAIAAAAAVNUsAgAAAABU1SwCAAAAAP//4v0AAP//VNXi/QAA////v+L9AAD//1TVLAIAAP//VNUsAgAA//9U1SwCAAD///+/4v28FjYR/7/i/bwWNhFU1eL9vBY2Ef//LAK8FjYR//8sArwWNhH/vywCvBY2EVTV4v0AADYRVNXi/QAANhH/v+L9AAA2Ef//LAIAADYR//8sAgAANhFU1SwCAAA2Ef+/4v3NAAAA///i/c0AAABU1eL9zQAAAFTVLALNAAAAVNUsAs0AAAD//ywCzQAAAFTV4v3NAP///7/i/c0A//9U1eL9zQD//1TVLALNAP//VNUsAs0A////vywCzQD//1TV/z//v/8//7//P/+//z//v1RVVFX/f/9//3//f6qqqqpUVVRV/z//v/8//7+qqqqqVFVUVf9//3//f/9/qqqqqlRVVFX/P/+//z//v6qqqqr/f/9/qqqqqlRVVFX/f/9//z//v6qqqqpUVVRV/z//v1TVqir/v/9//3//f6qqqqpUVVRV/3//f/8//7+qqqqq/z//f1RVVFX/P/+/VNWqKv8//3//f/8//3//f/9//z//f/9//7//f/8//3//f/9//v//f/9//3////9//7//f/8//3//f/8/////f/+///////9//7//f/8//3////9//v//f////3/+//9//7//f/9//z////9//7//f/8//3//f/8/////f////3/+//9//7//f/8//3////9/////f/9//z//f/9//7//f/8//3//f/8//3//f/9//3/+//9//7//f/8//3//f/9//v//f1RVVFX/P/+//7//f6qqVFX/P/9/VFWqqlRVVFX/P/+/VFVUVf9//3+qqlRVVFWqqlRVVFX/f/9//3//f1TVqir/v/9//z//f/9//39U1aoqVFVUVf9//3//v/9//z//f1RVVFX/f/9//z//v6qqqqqqqlRVVFWqqv8//7+qqqqq/3//f6qqqqqqqlRVVFWqqv9//3+qqqqq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_spnif")

[sub_resource type="ArrayMesh" id="ArrayMesh_mdu5b"]
_surfaces = [{
"aabb": AABB(0.0216093, -1.19209e-07, -0.0522991, 1.25957, 1.24163, 0.0530927),
"format": 34896613377,
"index_count": 54,
"index_data": PackedByteArray("AAADAAEAAAACAAMABgAFAAcABgAEAAUAAgAEAAYAAgAAAAQABwABAAMABwAFAAEACAALAAkACAAKAAsADgANAA8ADgAMAA0AEAATABEAEAASABMAFgAVABcAFgAUABUABAABAAUABAAAAAEA"),
"name": "Tafelfl채che.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACnBNSsAAAAABD81KwAAAEApwQAAAAAAQAQ/AAAAAD9/6cEl7AAAP3/EPyXsAAA/v+nBMIDAAD+/xD8wgMAAAAAEPw8/AAAAAD//zz8AAABABD8AAAAAAEA//8AAAAA/f8Q/P//AAD9/////v8AAP7/EPzCAwAA/v///8IDAAD9/6cE//8AAP3/AAD+/wAA//+nBMIDAAD+/wAAwgMAAAAApwQ8/AAAAAAAADz8AAABAKcEAAAAAAEAAAAAAAAA")
}, {
"aabb": AABB(0, -0.0349937, -0.0523125, 1.30214, 1.27662, 0.053119),
"format": 34896613377,
"index_count": 198,
"index_data": PackedByteArray("AAADAAEAAAACAAMABAAHAAUABAAGAAcACgAPAAsACgAOAA8ADAAJAA0ADAAIAAkACgAMAA4ACgAIAAwADwAJAAsADwANAAkAEgABAAAAEgAVAAEAEwARABQAEwAQABEAEgATABUAEgAQABMAAQARAAAAAQAUABEAFgAZABcAFgAYABkAGAAdABkAGAAcAB0AHAAbAB0AHAAaABsAGgAXABsAGgAWABcAGAAaABwAGAAWABoAHQAXABkAHQAbABcAAQAfAB4AAQALAB8ACwAhAB8ACwAJACEACQAgACEACQAUACAAFAAeACAAFAABAB4ACwAUAAkACwABABQAIQAeAB8AIQAgAB4AIgACAAAAIgAmAAIAJQAqACQAJQArACoAAgAnAAMAAgAmACcAAQAnACMAAQADACcAIwAmACIAIwAnACYAKAArACkAKAAqACsAJAAoACIAJAAqACgAIgApACMAIgAoACkAIwArACUAIwApACsAJgAlACQAJgAnACUAAAAjACIAAAABACMA"),
"name": "Tafelrahmen.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray("4PsEB9IDAABBBAQHEAAAAOD7BAfGFAAAQQQEBwMRAABBBIoLEAAAAEEELPwQAAAA4PuKC9IDAADg+yz80gMAAD8ELPws/AAAPwT//yz8AABBBCz8EAAAAEEE//8QAAAA3vss/O//AADe+///7/8AAOD7LPzSAwAA4Pv//9IDAADe+4oL7/8AAN77BAfv/wAA4PuKC9IDAAA/BIoLLPwAAD8EBAcs/AAAQQSKCxAAAADe+wQH7/8AAP3/BAf//wAA3vv//+//AAD9//////8AAOD7BAfSAwAA//8EB+IDAADg+///0gMAAP/////iAwAAAQAEBwAAAAABAP//AAAAAAAABAcb/AAAAAD//xv8AADg+wAA0gMAAEEEAAAQAAAA3/sAABykAABABAAAWaAAAOD7AADGFAAAQQQAAAMRAADg+9sA0gMAAEEE2wAQAAAA3/vbABykAABABNsAWaAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_8nfq7"]
resource_name = "KreideTafel_Cube_008"
_surfaces = [{
"aabb": AABB(0.0216093, -1.19209e-07, -0.0522991, 1.25957, 1.24163, 0.0530927),
"attribute_data": PackedByteArray("/9f5enC6L7r/13y9cLovutjZ+XpsvC+62Nl8vXO4L7pwul90/9f5enC6X3T/13y9bLxfdCXW+XpzuF90JdZ8vR1uojMObaIzHW5UNg5tVDYObVQ2AGxUNg5toDMAbKAzgGlUNsBqVDaAaaAzwGqgM8BqojMAbKIzwGpUNgBsVDb//3y9///+/8rEfL3KxP//"),
"format": 34896613399,
"index_count": 54,
"index_data": PackedByteArray("AAAGAAIAAAAEAAYADQALAA8ADQAJAAsABQAIAAwABQABAAgADgADAAcADgAKAAMAEAATABEAEAASABMAFgAVABcAFgAUABUAGAAbABkAGAAaABsAHgAdAB8AHgAcAB0AIgAhACMAIgAgACEA"),
"material": ExtResource("1_nv4ml"),
"name": "Tafelfl채che.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACnBNSs//8AAKcE1KxQ1QAAEPzUrP//AAAQ/NSsWNUBAKcEAAD//wEApwQAAFDVAQAQ/AAA//8BABD8AABY1f3/pwSXsFDV/f+nBJew///9/xD8l7BY1f3/EPyXsP///v+nBMIDUNX+/6cEwgP///7/EPzCA1jV/v8Q/MID//8AABD8PPxY1QAA//88/FjVAQAQ/AAAWNUBAP//AABY1f3/EPz//1DV/f////7/UNX+/xD8wgNQ1f7////CA1DV/f+nBP//UNX9/wAA/v9Q1f//pwTCA1DV/v8AAMIDUNUAAKcEPPxY1QAAAAA8/FjVAQCnBAAAWNUBAAAAAABY1QAApwTUrP//AAAQ/NSs///9/6cEl7D///3/EPyXsP/////6v1BVV1X///q/paqsqv//+r9QVVdV///6v6WqrKpQVVdV+r//f6WqrKr6v/9/UFVXVfq//3+lqqyq+r//f1JVrKpSVayqUlWsqlJVrKqnqldVp6pXVaeqV1WnqldVp6pXVaeqV1WnqldVp6pXVVJVrKpSVayqUlWsqlJVrKr1f/9/9X//f/V//3/1f/9/")
}, {
"aabb": AABB(0, -0.0349937, -0.0523125, 1.30214, 1.27662, 0.053119),
"attribute_data": PackedByteArray("HMAvuhzA/v9OwC+6TsD+/9qs3DHarF902e3cMdntX3RI4UeCwK8vulbiR4KNtS+6prIvugndfL2msi+6F958vUjhfL3Ar190VuJ8vY21X3Smsl90Cd18fKayX3QX3nx8SOF8vcCvX3QI4Hy9prIvutqsX3QJ3Xx8jbUvusnbfHxpVG51SOFHgsCvL7oI4EeCprL//9qsL7oJ3Xy9aVRudY21/v/J23y9gkKdMP5XnTDwy6p4AledMMfKqnhTYbExgkJudf5XbnVbpzU3AldudYWoNTdTYYJ2NUWdMPDLxHWXTZ0wx8rEdaxOnTCfXrExNUVudVunTzSXTW51hahPNKxObnWfXoJ21qNPNAJXnTBpRZ0wz0qdMAmlTzTkVZ0wx8rEdQJXbnVpRW51z0pudZTJxHXkVW51l12xMdajNTccSJ0wHEidMJtesTEJpTU3l12CdsfKqngcSG51HEhudZtegnaUyap4RL4vutjZfHxpVH5zmFTGcYdSrHJpVH5zRL7//9jZfL2drAZ8bLwvuphUfnOHUvVwnazRQGy8//8I4Hy9mFRudTtUbnUI4EeCF958vRK+L7qYVH5zO1R+cxfeR4ISvv//RL4vuhXafHxbVMZxS1KsckS+//8V2ny92qwGfBzAL7pbVH5zS1L1cNqs0UAcwP//"),
"format": 34896613399,
"index_count": 198,
"index_data": PackedByteArray("AAADAAEAAAACAAMABAAHAAUABAAGAAcADQAXAA8ADQAVABcAEAAKABIAEAAIAAoADAARABQADAAJABEAFgALAA4AFgATAAsAHQApAB8AHQAmACkAIQAaACMAIQAYABoAHAAiACUAHAAZACIAKAAbAB4AKAAkABsAKwAzAC0AKwAxADMAMgA/ADQAMgA9AD8APgA6AEAAPgA4ADoANwAuADkANwAsAC4AMAA2ADwAMAAqADYAQQAvADUAQQA7AC8AQwBNAEcAQwBJAE0ASABZAEwASABVAFkAVABSAFgAVABOAFIATwBGAFMATwBCAEYASgBQAFYASgBEAFAAVwBFAEsAVwBRAEUAXABpACAAXABuAGkAZgB4AGIAZgB8AHgAaABwAGsAaABsAHAAJwBvAF8AJwBqAG8AYABtAFoAYABxAG0AcgB9AHYAcgB5AH0AZAB0AF0AZAB6AHQAWwB3AGEAWwBzAHcAXgB7AGUAXgB1AHsAbQBnAGMAbQBxAGcAHwBhAFsAHwApAGEA"),
"material": ExtResource("2_by3jb"),
"name": "Tafelrahmen.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 126,
"vertex_data": PackedByteArray("4PsEB9IDWNVBBAQHEABY1eD7BAfGFFjVQQQEBwMRWNVBBIoLEAD//0EELPwQAP//4PuKC9ID///g+yz80gP//z8ELPws/P+/PwQs/Cz8UNU/BP//LPz/vz8E//8s/FjVQQQs/BAAUNVBBCz8EAD7/0EE//8QAFjVQQT//xAA+//e+yz87///v977LPzv/1DV3vv//+///7/e+///7/9Y1eD7LPzSA1DV4Pss/NID+//g+///0gNY1eD7///SA/v/3vuKC+///7/e+4oL7/9Y1d77BAfv//+/3vsEB+//UNXg+4oL0gNY1eD7igvSA/v/4PsEB9IDUNXg+wQH0gP7/+D7BAfSA///PwSKCyz8/78/BIoLLPxY1T8EBAcs/P+/PwQEByz8UNVBBIoLEABY1UEEigsQAPv/QQQEBxAA//9BBAQHEABQ1UEEBAcQAPv/3vsEB+/////e+wQH7////977BAfv//n//f8EB//////9/wQH///5//3/BAf/////3vv//+/////e+///7////977///v//+//f/////////9////////v/3/////////4PsEB9ID///g+wQH0gP5/+D7BAfSA/////8EB+ID+f///wQH4gP/////BAfiA///4Pv//9ID///g+///0gP/v+D7///SA////////+ID/7//////4gP////////iA///QQQEBxAA+f9BBAQHEAD//0EEBAcQAP//AQAEBwAA//8BAAQHAAD5/wEABAcAAP//QQT//xAA/79BBP//EAD//0EE//8QAP//AQD//wAA//8BAP//AAD/vwEA//8AAP//PwQEByz8//8/BAQHLPz5/z8EBAcs/P//AAAEBxv8//8AAAQHG/z//wAABAcb/Pn/PwT//yz8//8/BP//LPz/vz8E//8s/P//AAD//xv8//8AAP//G/z//wAA//8b/P+/4PsAANIDUNXg+wAA0gP7/+D7AADSA///4PsAANIDUNVBBAAAEABY1UEEAAAQAP//QQQAABAAUNVBBAAAEAD7/9/7AAAcpP+/3/sAABykUNXf+wAAHKRQ1UAEAABZoFjVQAQAAFmg/79ABAAAWaBQ1eD7BAfGFP+/4PsEB8YU//9BBAQHAxH//0EEBAcDEf+/4PsAAMYU/7/g+wAAxhRQ1eD7AADGFP//QQQAAAMR//9BBAAAAxH/v0EEAAADEVDV4PvbANIDWNXg+9sA0gP7/+D72wDSA1DVQQTbABAAWNVBBNsAEABY1UEE2wAQAPv/3/vbAByk/7/f+9sAHKRY1d/72wAcpFDVQATbAFmgWNVABNsAWaD/v0AE2wBZoFjVpaqsqqSqrKqlqqyqpKqsqvX//3/1//9/9f//f/X//3/1//X/UFVXVfX/9f+lqqyqUFVXVf4//j+lqqyq/j/+P/X/9f9QVVdV9f/1/6WqrKpQVVdV/j/+P6WqrKr+P/4/9f/1/6WqrKr1//X/UFVXVaWqrKr+P/4/UFVXVf4//j/6v/9/9f/1/6WqrKr1//X/UFVXVaWqrKr+P/4////5v1BVV1X+P/4////6v/V//3/6fwJA9X//f/p/AkD6v/9////6v/V//3/q/wmA9X//f+r/CYD6v/9////6v/p/AkD1//9/+n8CQPX//3/6v/9////6v+r/CYD1//9/6v8JgPX//3/6v/9/+n8CQPX//3/6v/9////6v/p/AkD1//9/6v8JgPX//3/6v/9////6v+r/CYD1//9/9X//f/p/AkD6v/9////6v/V//3/6fwJA9X//f+r/CYD6v/9////6v/V//3/q/wmAUFVXVf4//j/6v/9/p6pXVVJVrKr///m/T1VXVf4//j/1//X/UFVXVaeqV1VSVayq9f/1/1BVV1X1//X/+r//f///+b/1//X/9f/1/1BVV1X6v/9////5v/X/9f9QVVdVpaqsqv4//j+nqldVUlWsqqWqrKr+P/4/9f/1/6WqrKqnqldVUlWsqvX/9f+lqqyq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_mdu5b")

[sub_resource type="ArrayMesh" id="ArrayMesh_jdv05"]
_surfaces = [{
"aabb": AABB(-1.28049, -1.19209e-07, -0.0531057, 1.25957, 1.24163, 0.0530927),
"format": 34896613377,
"index_count": 54,
"index_data": PackedByteArray("AAADAAEAAAACAAMABgAFAAcABgAEAAUAAgAEAAYAAgAAAAQABwABAAMABwAFAAEACAALAAkACAAKAAsADgANAA8ADgAMAA0AEAATABEAEAASABMAFgAVABcAFgAUABUABAABAAUABAAAAAEA"),
"name": "Tafelfl채che",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACnBNSsAAAAABD81KwAAAEApwQAAAAAAQAQ/AAAAAD9/6cEl7AAAP3/EPyXsAAA/v+nBMIDAAD+/xD8wgMAAAAAEPw8/AAAAAD//zz8AAABABD8AAAAAAEA//8AAAAA/f8Q/P//AAD9/////v8AAP7/EPzCAwAA/v///8IDAAD9/6cE//8AAP3/AAD+/wAA//+nBMIDAAD+/wAAwgMAAAAApwQ8/AAAAAAAADz8AAABAKcEAAAAAAEAAAAAAAAA")
}, {
"aabb": AABB(-1.3021, -0.0349937, -0.053119, 1.30214, 1.27662, 0.053119),
"format": 34896613377,
"index_count": 198,
"index_data": PackedByteArray("AAADAAEAAAACAAMABAAHAAUABAAGAAcACgAPAAsACgAOAA8ADAAJAA0ADAAIAAkACgAMAA4ACgAIAAwADwAJAAsADwANAAkAEgABAAAAEgAVAAEAEwARABQAEwAQABEAEgATABUAEgAQABMAAQARAAAAAQAUABEAFgAZABcAFgAYABkAGAAdABkAGAAcAB0AHAAbAB0AHAAaABsAGgAXABsAGgAWABcAGAAaABwAGAAWABoAHQAXABkAHQAbABcAAQAfAB4AAQALAB8ACwAhAB8ACwAJACEACQAgACEACQAUACAAFAAeACAAFAABAB4ACwAUAAkACwABABQAIQAeAB8AIQAgAB4AIgACAAAAIgAmAAIAJQAqACQAJQArACoAAgAnAAMAAgAmACcAAQAnACMAAQADACcAIwAmACIAIwAnACYAKAArACkAKAAqACsAJAAoACIAJAAqACgAIgApACMAIgAoACkAIwArACUAIwApACsAJgAlACQAJgAnACUAAAAjACIAAAABACMA"),
"name": "Tafelrahmen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray("4PsEB9IDAABBBAQHEAAAAOD7BAfGFAAAQQQEBwMRAABBBIoLEAAAAEEELPwQAAAA4PuKC9IDAADg+yz80gMAAD8ELPws/AAAPwT//yz8AABBBCz8EAAAAEEE//8QAAAA3vss/O//AADe+///7/8AAOD7LPzSAwAA4Pv//9IDAADe+4oL7/8AAN77BAfv/wAA4PuKC9IDAAA/BIoLLPwAAD8EBAcs/AAAQQSKCxAAAADe+wQH7/8AAP3/BAf//wAA3vv//+//AAD9//////8AAOD7BAfSAwAA//8EB+IDAADg+///0gMAAP/////iAwAAAQAEBwAAAAABAP//AAAAAAAABAcb/AAAAAD//xv8AADg+wAA0gMAAEEEAAAQAAAA3/sAABykAABABAAAWaAAAOD7AADGFAAAQQQAAAMRAADg+9sA0gMAAEEE2wAQAAAA3/vbABykAABABNsAWaAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_uxund"]
resource_name = "KreideTafel_Cube_007"
_surfaces = [{
"aabb": AABB(-1.28049, -1.19209e-07, -0.0531057, 1.25957, 1.24163, 0.0530927),
"attribute_data": PackedByteArray("/9f5enC6L7r/13y9cLovutjZ+XpsvC+62Nl8vXO4L7pwul90/9f5enC6X3T/13y9bLxfdCXW+XpzuF90JdZ8vR1uojMObaIzHW5UNg5tVDYObVQ2AGxUNg5toDMAbKAzgGlUNsBqVDaAaaAzwGqgM8BqojMAbKIzwGpUNgBsVDb//3y9///+/8rEfL3KxP//"),
"format": 34896613399,
"index_count": 54,
"index_data": PackedByteArray("AAAGAAIAAAAEAAYADQALAA8ADQAJAAsABQAIAAwABQABAAgADgADAAcADgAKAAMAEAATABEAEAASABMAFgAVABcAFgAUABUAGAAbABkAGAAaABsAHgAdAB8AHgAcAB0AIgAhACMAIgAgACEA"),
"material": ExtResource("1_nv4ml"),
"name": "Tafelfl채che",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACnBNSs//8AAKcE1KxQ1QAAEPzUrP//AAAQ/NSsWNUBAKcEAAD//wEApwQAAFDVAQAQ/AAA//8BABD8AABY1f3/pwSXsFDV/f+nBJew///9/xD8l7BY1f3/EPyXsP///v+nBMIDUNX+/6cEwgP///7/EPzCA1jV/v8Q/MID//8AABD8PPxY1QAA//88/FjVAQAQ/AAAWNUBAP//AABY1f3/EPz//1DV/f////7/UNX+/xD8wgNQ1f7////CA1DV/f+nBP//UNX9/wAA/v9Q1f//pwTCA1DV/v8AAMIDUNUAAKcEPPxY1QAAAAA8/FjVAQCnBAAAWNUBAAAAAABY1QAApwTUrP//AAAQ/NSs///9/6cEl7D///3/EPyXsP/////6v1BVV1X///q/paqsqv//+r9QVVdV///6v6WqrKpQVVdV+r//f6WqrKr6v/9/UFVXVfq//3+lqqyq+r//f1JVrKpSVayqUlWsqlJVrKqnqldVp6pXVaeqV1WnqldVp6pXVaeqV1WnqldVp6pXVVJVrKpSVayqUlWsqlJVrKr1f/9/9X//f/V//3/1f/9/")
}, {
"aabb": AABB(-1.3021, -0.0349937, -0.053119, 1.30214, 1.27662, 0.053119),
"attribute_data": PackedByteArray("HMAvuhzA/v9OwC+6TsD+/9qs3DHarF902e3cMdntX3RI4UeCwK8vulbiR4KNtS+6prIvugndfL2msi+6F958vUjhfL3Ar190VuJ8vY21X3Smsl90Cd18fKayX3QX3nx8SOF8vcCvX3QI4Hy9prIvutqsX3QJ3Xx8jbUvusnbfHxpVG51SOFHgsCvL7oI4EeCprL//9qsL7oJ3Xy9aVRudY21/v/J23y9gkKdMP5XnTDwy6p4AledMMfKqnhTYbExgkJudf5XbnVbpzU3AldudYWoNTdTYYJ2NUWdMPDLxHWXTZ0wx8rEdaxOnTCfXrExNUVudVunTzSXTW51hahPNKxObnWfXoJ21qNPNAJXnTBpRZ0wz0qdMAmlTzTkVZ0wx8rEdQJXbnVpRW51z0pudZTJxHXkVW51l12xMdajNTccSJ0wHEidMJtesTEJpTU3l12CdsfKqngcSG51HEhudZtegnaUyap4RL4vutjZfHxpVH5zmFTGcYdSrHJpVH5zRL7//9jZfL2drAZ8bLwvuphUfnOHUvVwnazRQGy8//8I4Hy9mFRudTtUbnUI4EeCF958vRK+L7qYVH5zO1R+cxfeR4ISvv//RL4vuhXafHxbVMZxS1KsckS+//8V2ny92qwGfBzAL7pbVH5zS1L1cNqs0UAcwP//"),
"format": 34896613399,
"index_count": 198,
"index_data": PackedByteArray("AAADAAEAAAACAAMABAAHAAUABAAGAAcADQAXAA8ADQAVABcAEAAKABIAEAAIAAoADAARABQADAAJABEAFgALAA4AFgATAAsAHQApAB8AHQAmACkAIQAaACMAIQAYABoAHAAiACUAHAAZACIAKAAbAB4AKAAkABsAKwAzAC0AKwAxADMAMgA/ADQAMgA9AD8APgA6AEAAPgA4ADoANwAuADkANwAsAC4AMAA2ADwAMAAqADYAQQAvADUAQQA7AC8AQwBNAEcAQwBJAE0ASABZAEwASABVAFkAVABSAFgAVABOAFIATwBGAFMATwBCAEYASgBQAFYASgBEAFAAVwBFAEsAVwBRAEUAXABpACAAXABuAGkAZgB4AGIAZgB8AHgAaABwAGsAaABsAHAAJwBvAF8AJwBqAG8AYABtAFoAYABxAG0AcgB9AHYAcgB5AH0AZAB0AF0AZAB6AHQAWwB3AGEAWwBzAHcAXgB7AGUAXgB1AHsAbQBnAGMAbQBxAGcAHwBhAFsAHwApAGEA"),
"material": ExtResource("2_by3jb"),
"name": "Tafelrahmen",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 126,
"vertex_data": PackedByteArray("4PsEB9IDWNVBBAQHEABY1eD7BAfGFFjVQQQEBwMRWNVBBIoLEAD//0EELPwQAP//4PuKC9ID///g+yz80gP//z8ELPws/P+/PwQs/Cz8UNU/BP//LPz/vz8E//8s/FjVQQQs/BAAUNVBBCz8EAD7/0EE//8QAFjVQQT//xAA+//e+yz87///v977LPzv/1DV3vv//+///7/e+///7/9Y1eD7LPzSA1DV4Pss/NID+//g+///0gNY1eD7///SA/v/3vuKC+///7/e+4oL7/9Y1d77BAfv//+/3vsEB+//UNXg+4oL0gNY1eD7igvSA/v/4PsEB9IDUNXg+wQH0gP7/+D7BAfSA///PwSKCyz8/78/BIoLLPxY1T8EBAcs/P+/PwQEByz8UNVBBIoLEABY1UEEigsQAPv/QQQEBxAA//9BBAQHEABQ1UEEBAcQAPv/3vsEB+/////e+wQH7////977BAfv//n//f8EB//////9/wQH///7//3/BAf/////3vv//+/////e+///7////977///v//+//f/////////9////////v/3/////////4PsEB9ID///g+wQH0gP7/+D7BAfSA/////8EB+ID+f///wQH4gP/////BAfiA///4Pv//9ID///g+///0gP/v+D7///SA////////+ID/7//////4gP////////iA///QQQEBxAA+f9BBAQHEAD//0EEBAcQAP//AQAEBwAA//8BAAQHAAD5/wEABAcAAP//QQT//xAA/79BBP//EAD//0EE//8QAP//AQD//wAA//8BAP//AAD/vwEA//8AAP//PwQEByz8//8/BAQHLPz5/z8EBAcs/P//AAAEBxv8//8AAAQHG/z//wAABAcb/Pn/PwT//yz8//8/BP//LPz/vz8E//8s/P//AAD//xv8//8AAP//G/z//wAA//8b/P+/4PsAANIDUNXg+wAA0gP7/+D7AADSA///4PsAANIDUNVBBAAAEABY1UEEAAAQAP//QQQAABAAUNVBBAAAEAD7/9/7AAAcpP+/3/sAABykUNXf+wAAHKRQ1UAEAABZoFjVQAQAAFmg/79ABAAAWaBQ1eD7BAfGFP+/4PsEB8YU//9BBAQHAxH//0EEBAcDEf+/4PsAAMYU/7/g+wAAxhRQ1eD7AADGFP//QQQAAAMR//9BBAAAAxH/v0EEAAADEVDV4PvbANIDWNXg+9sA0gP7/+D72wDSA1DVQQTbABAAWNVBBNsAEABY1UEE2wAQAPv/3/vbAByk/7/f+9sAHKRY1d/72wAcpFDVQATbAFmgWNVABNsAWaD/v0AE2wBZoFjVpaqsqqSqrKqlqqyqpKqsqvX//3/1//9/9f//f/X//3/1//X/UFVXVfX/9f+lqqyqUFVXVf4//j+lqqyq/j/+P/X/9f9QVVdV9f/1/6WqrKpQVVdV/j/+P6WqrKr+P/4/9f/1/6WqrKr1//X/UFVXVaWqrKr+P/4/UFVXVf4//j/6v/9/9f/1/6WqrKr1//X/UFVXVaWqrKr+P/4////4v1BVV1X+P/4////6v/V//3/6fwJA9X//f/x/AUD6v/9////6v/V//3/q/wmA9X//f+r/CYD6v/9////6v/x/AUD1//9/+n8CQPX//3/6v/9////6v+r/CYD1//9/6v8JgPX//3/6v/9/+n8CQPX//3/6v/9////6v/p/AkD1//9/6v8JgPX//3/6v/9////6v+r/CYD1//9/9X//f/p/AkD6v/9////6v/V//3/6fwJA9X//f+r/CYD6v/9////6v/V//3/q/wmAUFVXVf4//j/6v/9/p6pXVVJVrKr///i/T1VXVf4//j/1//X/UFVXVaeqV1VSVayq9f/1/1BVV1X1//X/+r//f///+L/1//X/9f/1/1BVV1X6v/9////4v/X/9f9QVVdVpaqsqv4//j+nqldVUlWsqqWqrKr+P/4/9f/1/6WqrKqnqldVUlWsqvX/9f+lqqyq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_jdv05")

[node name="KreideTafel" type="StaticBody3D"]
collision_mask = 0
script = ExtResource("1_l8k1g")

[node name="middleFace" type="MeshInstance3D" parent="."]
lod_bias = 0.001
visibility_range_end = 50.0
mesh = SubResource("ArrayMesh_dasur")
skeleton = NodePath("")

[node name="rightFace" type="MeshInstance3D" parent="middleFace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.80169, 0.938093, 0.271651)
lod_bias = 0.001
visibility_range_end = 50.0
mesh = SubResource("ArrayMesh_8nfq7")
skeleton = NodePath("")

[node name="leftFace" type="MeshInstance3D" parent="middleFace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.210797, 0.938093, 0.272458)
visibility_range_end = 50.0
mesh = SubResource("ArrayMesh_uxund")
skeleton = NodePath("")
